--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.x.x",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@ramonak/react-progress-bar": "^5.2.0",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
     "react": "^18.3.1",
