--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.7.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
