--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.x.x",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
@@ -18,6 +21,7 @@
     "@ramonak/react-progress-bar": "^5.2.0",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
+    "framer-motion": "^11.3.9",
     "chart.js": "^4.4.3",
     "primeicons": "^7.0.0",
     "primereact": "^10.7.0",
@@ -41,7 +45,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.6",
     "vite": "^5.3.1"
   }
 }
