--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
     "chart.js": "^4.4.3",
+    "communicare-webapp": "file:",
     "framer-motion": "^11.3.9",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.0",
