--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@ramonak/react-progress-bar": "^5.2.0",
-    "axios": "^1.7.2",
+    "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
     "chart.js": "^4.4.3",
     "framer-motion": "^11.11.17",
+    "leaflet": "^1.9.4",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.0",
     "react": "^18.3.1",
@@ -32,6 +33,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.28.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
