--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^4.4.3",
     "framer-motion": "^11.11.17",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.469.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.0",
     "react": "^18.3.1",
