--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-router-dom": "^6.28.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
