--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
     "chart.js": "^4.4.3",
+    "communicare-webapp": "file:",
     "framer-motion": "^11.11.17",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.469.0",
