--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.28.2",
     "react-scroll": "^1.9.0",
+    "react-search-box": "^3.0.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.15.10"
